--- a/index.css
+++ b/index.css
@@ -1,32 +1,40 @@
+html, body{
+  height:100%;
+}
+
 body {
     margin: auto;
     overflow-x: hidden;
+    background-color: #FFE0B2;
 }
 
 header {
     width: 100%;
-    height: 270px;
-    background-color: #FF4081;
+    height: 100px;
     position: absolute;
 }
 
 figure {
-        z-index: 99999;
+    z-index: 99999;
     position: fixed;
     margin-top: 14px;
     font-size: 9pt;
     font-family: Montserrat, sans-serif;
-    color: #fff;
+    transition: 0.5s;
+}
+
+figure:hover {
+    transition: 0.5s;
+    letter-spacing: 5px;
 }
 
 nav {
-        z-index: 99999;
+    z-index: 99999;
     font-family: Montserrat, sans-serif;
     width: 100%;
     height: 100px;
-    background-color: #FF4081;
+    background-color: transparent;
     position: fixed;
-    color: #fff;
     text-align: right;
     transition: 0.5s;
 }
@@ -54,6 +62,8 @@ a {
 main {
     position: absolute;
     width: 100%;
+    height:100%; 
+    min-height:100%;
 }
 
 .logo {
@@ -69,17 +79,17 @@ main {
 
 .fs {
     width: 100%;
-    height: 720px;
-    margin-top: 270px;
+    height: 100%;
+    background: linear-gradient(rgb(255, 205, 210), rgb(255, 224, 178));
 }
 
 .info {
-    color: #666;
-    background-color: #fff;
+    color: #444;
+    background-color: #FFE0B2;
     margin: 0% 20%;
     text-align: center;
     width: 60%;
-    font-family: Montserrat, sans-serif;
+    min-height: 200%;
     font-size: 18pt;
     -webkit-user-select: none; /* Chrome/Safari */        
 -moz-user-select: none; /* Firefox */
@@ -91,43 +101,34 @@ user-select: none;
     cursor: default;
 }
 
-.info h1 {
+h1 {
     font-family: Montserrat, sans-serif;
-    color: #666;
 }
 
-#ps {
-    border-bottom: 5px solid #FF4081;
-    width: 70%;
-    font-size: 10pt;
-}
-
-#ai {
-    border-bottom: 5px solid #1DE9B6;
-    width: 80%;
-    font-size: 10pt;
-}
-
-#ind {
-    border-bottom: 5px solid #7C4DFF;
-    width: 60%;
-    font-size: 10pt;
+p {
+    font-family: 'Domine', serif;
 }
 
 .pie {
-    background-color: #f0f0f0;
-    color: #fff;
-    height: 100px;
+    background: #ffcdd2;
+    color: #555;
+    height: 100%;
     width: 102%;
-    font-family: sans-serif;
-    font-size: 10pt;
-    position: absolute;
+    font-family: 'Domine', serif;
+    font-size: 13pt;
     bottom: 0;
     margin-left: -1%;
+    position: ;
+    transition: 0.5s;
+}
+
+.pie h1 {
+    font-family: Montserrat, sans-serif;
+    font-size: 36pt;
 }
 
 .circulos {
-    margin-left: 8%;
+    margin-left: 3%;
     float: left;
     padding: 20px;
 }
@@ -146,6 +147,265 @@ user-select: none;
 }
 
 .contain-c {
-    margin-left: 8%;
     text-align: center;
+}
+
+.contain-c h1 {
+    color: #444;
+    font-size: 36pt;
+}
+
+.contain-c img {
+    margin-left: 3%;
+    margin-right: 3%;
+    opacity: 0.8;
+    transition: 0.5s;
+}
+
+.contain-c img:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.parallax-window {
+    height: 760px;
+    background: transparent;
+}
+
+#ani {
+    width: 200px;
+    height: 200px;
+    border: 10px solid white;
+    border-radius: 200px;
+    -webkit-animation-name: anim; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 10s; /* Chrome, Safari, Opera */
+    animation-name: anim;
+    animation-duration: 10s;
+    top: 20%;
+    background: hidden;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes anim{
+    0% {border-radius: 200px; width: 200px;}
+    20% {border-radius: 20px; width: 200px;}
+    80% {border-radius: 20px; width: }
+/*    90% {border-radius: 20px; width: 400px;}*/
+    100% {border-radius: 200px; width: 200px;}
+}
+
+/* Standard syntax */
+@keyframes anim{
+    0% {border-radius: 200px; width: 200px; height: 200px; margin-top: 20%;}
+    20% {border-radius: 20px; width: 200px; height: 200px;}
+    80% {border-radius: 20px; width: 100%;}
+    90% {border-radius: 20px; width: 100%; height: 720px; background-image: url(http://thetechhacker.com/wp-content/uploads/2014/12/Best-Websites-To-Create-Gifs-Online.gif);}
+    100% {border-radius: 200px; width: 200px; height: 200px;}
+}
+
+
+/*Mobile*/
+
+@media screen and (max-width: 480px) {
+    html, body{
+  height:100%;
+}
+
+body {
+    margin: auto;
+    overflow-x: hidden;
+    background-color: #FFE0B2;
+}
+
+header {
+    z-index: 99999;
+    width: 100%;
+    height: 100px;
+    background: ;
+    position: fixed;
+}
+
+figure {
+    position: fixed;
+    margin-left: 15px;
+    font-size: 9pt;
+    font-family: Montserrat, sans-serif;
+    letter-spacing: 0px;
+    transition: 0.5s;
+    margin-top: -10px;
+}
+
+nav {
+    font-family: Montserrat, sans-serif;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    text-align: right;
+    transition: 0.5s;
+    top: -20px;
+}
+
+ul {
+    margin-right: 10px;
+    display: inline;
+    position: relative;
+}
+
+ul li {
+    display: inline;
+    padding: 5px;
+}
+
+li b {
+    font-family: FontAwesome;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+main {
+    position: absolute;
+    width: 100%;
+    height:100%; 
+    min-height:100%;
+}
+
+.logo {
+    background-color: #FF4081;
+    height: 270px;
+    width: 1500px;
+    margin-left: -300px;
+}
+
+#drag {
+    cursor: pointer;
+}
+
+.fs {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgb(255, 205, 210), rgb(255, 224, 178));
+}
+
+.info {
+    color: #444;
+    background-color: #FFE0B2;
+    margin: 0 auto;
+    text-align: center;
+    width: 80%;
+    min-height: 200%;
+    font-size: 13pt;
+    -webkit-user-select: none; /* Chrome/Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+ */
+
+/* Rules below not implemented in browsers yet */
+-o-user-select: none;
+user-select: none;
+    cursor: default;
+}
+
+h1 {
+    font-family: Montserrat, sans-serif;
+}
+
+p {
+    font-family: 'Domine', serif;
+}
+
+.pie {
+    background: #ffcdd2;
+    color: #555;
+    height: 100%;
+    width: 102%;
+    font-family: 'Domine', serif;
+    font-size: 13pt;
+    bottom: 0;
+    margin-left: -1%;
+    position: ;
+    transition: 0.5s;
+}
+
+.pie h1 {
+    font-family: Montserrat, sans-serif;
+    font-size: 30pt;
+}
+
+.circulos {
+    margin-left: 3%;
+    float: left;
+    padding: 20px;
+}
+
+.circle {
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    overflow: hidden;
+    -webkit-align-content: center;
+    align-content: center;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    background: #ECEFF1;
+    margin-right: 10%;
+}
+
+.contain-c {
+    text-align: center;
+}
+
+.contain-c h1 {
+    color: #444;
+    font-size: 36pt;
+}
+
+.contain-c img {
+    margin-left: 3%;
+    margin-right: 3%;
+    opacity: 0.8;
+    transition: 0.5s;
+}
+
+.contain-c img:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.parallax-window {
+    height: 760px;
+    background: transparent;
+}
+
+#ani {
+    width: 200px;
+    height: 200px;
+    border: 10px solid white;
+    border-radius: 200px;
+    -webkit-animation-name: anim; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 10s; /* Chrome, Safari, Opera */
+    animation-name: anim;
+    animation-duration: 10s;
+    top: 20%;
+    background: hidden;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes anim{
+    0% {border-radius: 200px; width: 200px;}
+    20% {border-radius: 20px; width: 200px;}
+    80% {border-radius: 20px; width: }
+/*    90% {border-radius: 20px; width: 400px;}*/
+    100% {border-radius: 200px; width: 200px;}
+}
+
+/* Standard syntax */
+@keyframes anim{
+    0% {border-radius: 200px; width: 200px; height: 200px; margin-top: 20%;}
+    20% {border-radius: 20px; width: 200px; height: 200px;}
+    80% {border-radius: 20px; width: 100%;}
+    90% {border-radius: 20px; width: 100%; height: 720px; background-image: url(http://thetechhacker.com/wp-content/uploads/2014/12/Best-Websites-To-Create-Gifs-Online.gif);}
+    100% {border-radius: 200px; width: 200px; height: 200px;}
+}   
 }
