--- a/contacto.css
+++ b/contacto.css
@@ -1,12 +1,17 @@
+html, body{
+  height:100%;
+}
+
 body {
     margin: auto;
-    background: #ECEFF1;
+    font-family: 'Domine', serif;
+    background: #FFE0B2;
+    overflow-x: hidden;
 }
 
 header {
     width: 100%;
     height: 100px;
-    background-color: #7C4DFF;
     position: absolute;
 }
 
@@ -22,7 +27,6 @@ nav {
     font-family: Montserrat, sans-serif;
     width: 100%;
     height: 100px;
-    background-color: #7C4DFF;
     position: fixed;
     color: #fff;
     text-align: right;
@@ -50,39 +54,39 @@ a {
 
 #contacto {
     width: 100%;
-    background: #ECEFF1;
+    height: 100%;
     margin: 0 auto;
     text-align: center;
     font-family: Montserrat, sans-serif;
-    color: #666;
+    color: #444;
 }
 
 #contact-area {
-	width: 600px;
-	margin-top: 2%;
+	width: 50%;
+	margin-top: 2%;  
 }
 
 #contact-area input, #contact-area textarea {
 	padding: 5px;
-	width: 600px! important;
+	width: 100%;
 	font-family: Montserrat, sans-serif;
 	font-size: 1.4em;
 	margin: 0px 0px 10px 0px;
-	border-top: 2px solid #ECEFF1;
-    border-right: 2px solid #ECEFF1;
-    border-left: 2px solid #ECEFF1;
+    background: #FFE0B2;
+	border-top: 2px solid #FFE0B2;
+    border-right: 2px solid #FFE0B2;
+    border-left: 2px solid #FFE0B2;
     border-bottom: 1px solid #999;
-    background: #ECEFF1;
-    color: #666;
+    color: #444;
 }
 
 #contact-area textarea {
 	height: 90px;
-    max-height: 130px;
+    max-height: 200px;
 }
 
 #contact-area textarea:focus, #contact-area input:focus {
-	border-bottom: 1px solid #7C4DFF;
+	border-bottom: 1px solid #F48FB1;
     outline: 0;
     transition: 0.3s;
 }
@@ -93,15 +97,14 @@ a {
     height: 70px;
 	float: right;
     border-radius: 50px;
-    background: #7C4DFF;
+    background: #F48FB1;
     border-bottom: 0px;
-    color: #FFF;
+    color: #FFE0B2;
     transition: 0.5s;
 }
 
 #contact-area input.submit-button:hover {
     cursor: pointer;
-    background-color: #7C4DFF;
     border-radius: 5px;
     transition: 0.3s;
 }
@@ -117,11 +120,188 @@ label {
 }
 
 .pie {
-    background-color: #ECEFF1;
-    color: #7C4DFF;
-    height: 100px;
+    background: #ffcdd2;
+    color: #555;
+    height: 100%;
+    width: 102%;
+    font-family: 'Domine', serif;
+    font-size: 13pt;
+    bottom: 0;
+    margin-left: -1%;
+}
+
+h1 {
+    font-family: Montserrat, sans-serif;
+    font-size: 36pt;
+}
+
+.parallax-window {
     width: 100%;
-    font-family: sans-serif;
-    font-size: 10pt;
-     margin-top: 110px;
+    height: 70%;
+    background: transparent;
+}
+
+main {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+/*Mobile*/
+
+@media screen and (max-width: 480px) {
+    html, body{
+  height:100%;
+}
+
+
+body {
+    margin: auto;
+    font-family: 'Domine', serif;
+    background: #FFE0B2;
+    overflow-x: hidden;
+}
+
+header {
+    z-index: 99999;
+    width: 100%;
+    height: 100px;
+    background: ;
+    position: fixed;
+}
+
+figure {
+    position: fixed;
+    margin-left: 15px;
+    font-size: 9pt;
+    font-family: Montserrat, sans-serif;
+    letter-spacing: 0px;
+    transition: 0.5s;
+    margin-top: 20px;
+}
+
+nav {
+    font-family: Montserrat, sans-serif;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    text-align: right;
+    transition: 0.5s;
+    top: -20px;
+}
+
+ul {
+    margin-right: 10px;
+    display: inline;
+    position: relative;
+}
+
+ul li {
+    display: inline;
+    padding: 5px;
+}
+
+li b {
+    font-family: FontAwesome;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+#contacto {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+    font-family: Montserrat, sans-serif;
+    color: #444;
+}
+
+#contact-area {
+	width: 600px;
+	margin-top: 2%;  
+}
+
+#contact-area input, #contact-area textarea {
+	padding: 5px;
+	width: 600px! important;
+	font-family: Montserrat, sans-serif;
+	font-size: 1.4em;
+	margin: 0px 0px 10px 0px;
+    background: #FFE0B2;
+	border-top: 2px solid #FFE0B2;
+    border-right: 2px solid #FFE0B2;
+    border-left: 2px solid #FFE0B2;
+    border-bottom: 1px solid #999;
+    color: #444;
+}
+
+#contact-area textarea {
+	height: 90px;
+    max-height: 200px;
+}
+
+#contact-area textarea:focus, #contact-area input:focus {
+	border-bottom: 1px solid #F48FB1;
+    outline: 0;
+    transition: 0.3s;
+}
+
+#contact-area input.submit-button {
+    font-family: 'FontAwesome', 'Montserrat';
+	width: 70px! important;
+    height: 70px;
+	float: right;
+    border-radius: 50px;
+    background: #F48FB1;
+    border-bottom: 0px;
+    color: #FFE0B2;
+    transition: 0.5s;
+}
+
+#contact-area input.submit-button:hover {
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+label {
+	float: left;
+	text-align: left;
+	margin-right: 15px;
+	width: 100px;
+	padding-top: 5px;
+	font-size: 1.4em;
+    font-family: Montserrat, sans-serif;
+}
+
+.pie {
+    background: #ffcdd2;
+    color: #555;
+    height: 100%;
+    width: 102%;
+    font-family: 'Domine', serif;
+    font-size: 13pt;
+    bottom: 0;
+    margin-left: -1%;
+}
+
+h1 {
+    font-family: Montserrat, sans-serif;
+    font-size: 30pt;
+}
+
+.parallax-window {
+    width: 100%;
+    height: 70%;
+    background: transparent;
+}
+
+main {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 }
